--- a/css/gallery.css
+++ b/css/gallery.css
@@ -121,16 +121,15 @@ footer>div{
     top: 0;
     display: none;
     text-align: center;
-    padding-left: 30vw;
 }
 
 
 .coverimage{
     top: 6vh;
-    height: 90vh;
     position: fixed;
     z-index: 125;
-    display: none;
+    display: block;
+    margin: 15vh 0 0 30%;
 }
 
 .exit{
@@ -144,3 +143,9 @@ footer>div{
     user-select: none;
     display: none;
 }
+
+@media screen and (max-width: 575px) and (min-width: 310px)  {
+    .coverimage{
+        margin: 20vh 0 0 0;
+      }
+  }
