--- a/css/about.css
+++ b/css/about.css
@@ -83,3 +83,25 @@ body{
     margin-top: 30px;
     margin-bottom: 15px;
 }
+
+.animate{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    z-index: 100000;
+    text-align: center;
+    line-height: 100vh;
+    top: 0;
+    position: fixed;
+}
+
+.animate-logo{
+    animation-name: logo;
+    animation-iteration-count: infinite;
+    animation-duration: 5s;
+}
+
+@keyframes logo {
+    0%   {transform: rotateY(0deg)}
+    100%   {transform: rotateY(360deg);}
+}
