--- a/css/gallery.css
+++ b/css/gallery.css
@@ -144,6 +144,28 @@ footer>div{
     display: none;
 }
 
+.animate{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    z-index: 100000;
+    text-align: center;
+    line-height: 100vh;
+    top: 0;
+    position: fixed;
+}
+
+.animate-logo{
+    animation-name: logo;
+    animation-iteration-count: infinite;
+    animation-duration: 5s;
+}
+
+@keyframes logo {
+    0%   {transform: rotateY(0deg)}
+    100%   {transform: rotateY(360deg);}
+}
+
 @media screen and (max-width: 575px) and (min-width: 310px)  {
     .coverimage{
         margin: 20vh 0 0 0;
