--- a/css/home.css
+++ b/css/home.css
@@ -132,6 +132,28 @@ footer>div{
     font-weight: 800;
 }
 
+.animate{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    z-index: 100000;
+    text-align: center;
+    line-height: 100vh;
+    top: 0;
+    position: fixed;
+}
+
+.animate-logo{
+    animation-name: logo;
+    animation-iteration-count: infinite;
+    animation-duration: 5s;
+}
+
+@keyframes logo {
+    0%   {transform: rotateY(0deg)}
+    100%   {transform: rotateY(360deg);}
+}
+
 @media screen and (max-width: 440px) and (min-width: 320px)  {
     section>p {
       letter-spacing: 7px;
