--- a/css/gallery.css
+++ b/css/gallery.css
@@ -125,18 +125,19 @@ footer>div{
 
 
 .coverimage{
-    top: 6vh;
-    position: fixed;
     z-index: 125;
     display: block;
-    margin: 15vh 0 0 30%;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateY(15%);
+    width: 80vh;
 }
 
 .exit{
     position: fixed;
-    top: 10vh;
+    top: 8vh;
     background-color: black;
-    right: 10vw;
+    right: 8vw;
     color: white;
     cursor: pointer;
     z-index: 125;
@@ -166,8 +167,19 @@ footer>div{
     100%   {transform: rotateY(360deg);}
 }
 
-@media screen and (max-width: 575px) and (min-width: 310px)  {
+
+@media only screen and (max-width:420px){
     .coverimage{
-        margin: 20vh 0 0 0;
+        width:40vh;
+        transform: translateY(70%);
       }
-  }
+}
+
+@media screen and (max-width:575px) and (min-width:420px){
+
+    .coverimage{
+        width:60vh;
+        transform: translateY(30%);
+      }
+
+}
